# amazon_ads_mcp

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  Dockerfile.proxy  INSTALL.md  N8N_INTEGRATION.md  PROXY.md  README.md  docker-compose-hostinger.yaml  docker-compose-production.yaml  docker-compose.yaml  n8n-workflow-example.json  pyproject.toml  requirements.txt
.build/: README.md
.build/config/: amazon_ads_openapi.json  setup.sh
.build/debug/: compare_requests.py  debug_headers.py  fix_mcp_server.py  fix_mount_proxy.py  test_auth_fix.py  test_direct_auth.py  test_eu_routing.py  test_eu_with_client.py  test_mcp_eu.py  test_mcp_eu_correct.py  test_mcp_tool_call.py  test_mount_issue.py  test_openbridge_auth.py  test_profile_access.py  test_region_tools.py  test_tool_invocation.py
.build/debug/patch_archive_fastmcp_fixed/: README.md  apply-fastmcp-fix.py  export-content-type-issue.md  export-content-type-solution.md  fastmcp-schema-preservation-fix.md
.build/openapi/resources/: AMCAdAudience.json  AMCAdAudience.manifest.json  AMCAdAudience.media.json  AMCAdAudience.transform.json  AMCAdmin.json  AMCAdmin.manifest.json  AMCAdmin.media.json  AMCAdmin.transform.json  AMCRuleAudience.json  AMCRuleAudience.manifest.json  AMCRuleAudience.media.json  AMCRuleAudience.transform.json  AMCWorkflow.json  AMCWorkflow.manifest.json  AMCWorkflow.media.json  AMCWorkflow.transform.json  AccountsAccountBudgets.json  AccountsAccountBudgets.manifest.json  AccountsAccountBudgets.media.json  AccountsAccountBudgets.transform.json  AccountsAdsAccounts.json  AccountsAdsAccounts.manifest.json  AccountsAdsAccounts.media.json  AccountsAdsAccounts.transform.json  AccountsBilling.json  AccountsBilling.manifest.json  AccountsBilling.media.json  AccountsBilling.transform.json  AccountsManagerAccounts.json  AccountsManagerAccounts.manifest.json  AccountsManagerAccounts.media.json  AccountsManagerAccounts.transform.json  AccountsProfiles.json  AccountsProfiles.manifest.json  AccountsProfiles.media.json  AccountsProfiles.transform.json  AmazonAttribution.json  AmazonAttribution.manifest.json  AmazonAttribution.media.json  AmazonAttribution.transform.json  (+121 more)
.build/scripts/: build_production.py  minify_specs.py  process_openapi_specs.py  restore_package_aliases.py  update_prefixes.py
.build/scripts/archive/: download_resource_specs.py  fix_fastmcp_schemas.py  fix_fastmcp_transitive_refs.py  process_specs_with_validation.py  remove_auth_params.py  simple_test.py  test_client.py  test_mcp_client.py  test_mcp_sse.py
.build/scripts/debug/: CLEAN_ARCHITECTURE.md  auth.py  auth_correct_scope.py  auth_openbridge.py  auth_with_scopes.py  compare_with_working.py  debug_openbridge_tokens.py  diagnose_auth.py  direct_api_test.py  exchange_code.py  export_all_data.py  final_diagnostic.py  get_token_only.py  list_all_identities.py  list_all_tools.py  query_all_entities.py  run_server_sse.py  start_http_server.py  start_server_port.py  test_account_api.py  test_account_variations.py  test_ads_api_v1.py  test_all_headers.py  test_amazon_auth.py  test_api.py  test_api_call.py  test_auth_formats.py  test_auto_detect.py  test_complete_flow.py  test_configured_server.py  test_detailed_response.py  test_dynamic_api_call.py  test_dynamic_server.py  test_dynamic_tools.py  test_exact_curl.py  test_exports_api.py  test_fastmcp_tools.py  test_final_amazon_ads.py  test_final_dynamic.py  test_fresh_token.py  (+13 more)
.build/scripts/schemas/: manifest.schema.json  transform.schema.json
.build/spec_patches/: common.py  registry.py  safety_defaults.py
.build/spec_patches/patches/: AccountsAdsAccounts.py  AccountsProfiles.py
.build/spec_utils/: io.py
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  pr-title-check.yml  release.yml
src/amazon_ads_mcp/: __init__.py
src/amazon_ads_mcp/auth/: hooks.py  manager.py  token_store.py
src/amazon_ads_mcp/auth/providers/: openbridge.py
src/amazon_ads_mcp/config/: settings.py
src/amazon_ads_mcp/middleware/: authentication.py  session.py
src/amazon_ads_mcp/proxy/: __init__.py  server.py
src/amazon_ads_mcp/server/: mcp_server.py  openapi_utils.py  server_builder.py
src/amazon_ads_mcp/utils/: export_content_type_resolver.py  export_download_handler.py  http_client.py  region_config.py  session_logging.py
src/amazon_ads_mcp/utils/media/: negotiator.py  types.py
tests/unit/: test_authenticated_client.py  test_content_type_resolver.py
